# nrf52840-ble-led

./: .gitignore  README.md
firmware/.cargo/: config.toml.bak
gui/nrf52840_led_gui/: Cargo.toml  README.md
gui/nrf52840_led_gui/src/: main.rs
